# DeutschBoost

./: .vercelignore  App.tsx  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  MainApp.tsx  PHASE_1_COMPLETE.md  PRACTICE_FEATURE_README.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  create-icons.cjs  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
components/: Card.tsx  ConversationHistoryCard.tsx  DailySuggestions.tsx  ExperienceAppShell.tsx  Header.tsx  LoadingSpinner.tsx  PracticeStatsWidget.tsx
pages/: ActivityPage.tsx  ConversationPage.tsx  EnhancedPlacementTestPage.tsx  ExamSimulatorPage.tsx  HomePage.tsx  LearningPlanPage.tsx  LocalDashboardPage.tsx  LocalSettingsPage.tsx  PlacementTestPage.tsx  PracticePage.tsx  ProfilePage.tsx  SpeakingActivityPage.tsx
public/: README.md  create-png-icons.html  desktop-sw-cleanup.js  icon-generator.html  manifest.json
scripts/: native-readiness-core.mjs  native-readiness.mjs
services/: activityService.ts  conversationService.ts  geminiService.ts  learningPlanService.ts  practiceService.ts
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase_migrations/: 00_diagnostic_and_fix.sql  01_add_learning_plan_items.sql  02_add_reading_skill.sql  add_mother_language.sql  check_plan_items.sql  ensure_user_exists.sql  verify_conversation_table.sql  verify_fix.sql
tests/: setup.ts  (+1 more)
(+171 files in other folders)
