[package]
name = "deutschboost"
version = "0.0.3"
description = "DeutschBoost local-first German learning desktop app"
authors = ["DeutschBoost"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deutschboost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3
